--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,11 @@ h3{
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
-
+@media(max-width: 700px){
+    .row{
+        flex-direction: column;
+    }
+}
 /* Campus */
 .campus{
     width: 80%;
@@ -260,7 +264,15 @@ h3{
     margin-top: 15px;
     text-align: left;
 }
-
+.testimonial-col .fa{
+    color: #f44336;
+}
+@media(max-width: 700px){
+    .testimonial-col img{
+        margin-left: 0px;
+        margin-right: 30px;
+    }
+}
 /*Call To Action*/
 .cta{
     margin: 100px auto;
@@ -277,7 +289,11 @@ h3{
     margin-bottom: 40px;
     padding: 0;
 }
-
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
 
 /*Footer*/
 .footer{
@@ -289,5 +305,14 @@ h3{
     margin-bottom: 25px;
     margin-top: 20px;
     font-weight: 600;
+}
+.icons .fa{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+}
+.fa-heart-o{
+    color: #f44336;
 }
 
